# CV

./: .gitignore  hospitals.yaml  index.html  pyproject.toml
docs/superpowers/plans/: 2026-07-20-doctor-cv-crawler.md
docs/superpowers/specs/: 2026-07-20-doctor-cv-crawler-design.md
src/doctor_cv/: __init__.py  cli.py  crawl.py  deptfilter.py  discovery.py  dotenv.py  extractor.py  fetcher.py  hospital_catalog.py  hospital_list.py  models.py  registry.py  run_all.py  run_amc.py  run_catalog.py  run_cmc.py  run_kumc.py  run_smc.py  run_snubh.py  store.py
src/doctor_cv/adapters/: __init__.py  amc.py  cmc.py  kumc.py  smc.py  snubh.py
tests/: test_amc_adapter.py  test_cli.py  test_cmc_adapter.py  test_deptfilter.py  test_discovery.py  test_dotenv.py  test_extractor.py  test_fetcher.py  test_hospital_catalog.py  test_hospital_list.py  test_kumc_adapter.py  test_models.py  test_registry.py  test_run_all.py  test_run_amc.py  test_run_catalog.py  test_smc_adapter.py  test_smoke.py  test_snubh_adapter.py  test_store.py
tests/fixtures/: doctor_index_sample.html
viewer/: app.js  index.html  sample-doctors.json
viewer/data/: amc.json  h10760.json  h1378.json  h15515.json  h21645.json  h5871.json  h73221.json  h79116.json  manifest.json  smc.json  snubh.json
