[project]
name = "doctor-cv"
version = "0.1.0"
description = "의료진 경력 크롤러 + 웹 뷰어 (Phase 1)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "playwright>=1.44",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
